S28 3160: Report Update - Access Removed (#880)